fix: left border of active node causes a layout shift

--- a/src/styles/card/floating-card-button.css
+++ b/src/styles/card/floating-card-button.css
@@ -125,10 +125,6 @@
     top: calc(50% - 10px);
     left: -40px;
 }
-/* to account for the border*/
-.active-node .collapse-button{
-    left: -45px;
-}
 
 /* misc */
 .delete-card-button:hover{
